[project]
name = "currency-bot"
version = "0.1.0"
description = "Telegram currency rate bot using monobank API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.13.1",
    "aiohttp==3.10.10",
    "redis==5.2.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "apscheduler==3.10.4",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
]
